# shadow

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/performance_examples/: CMakeLists.txt  homogenous.cpp
include/: any.hpp  any_reference.hpp  api_info_types.hpp  api_types.hpp  compile_time.hpp  director.hpp  exceptions.hpp  info_iterator.hpp  info_iterators.hpp  reflection_binding.hpp  reflection_info.hpp  reflection_manager.hpp  shadow.hpp
include/meta/: free_function_deduction.hpp  member_function_deduction.hpp  member_variable_deduction.hpp  type_list.hpp
src/: api_types.cpp  main.cpp  reflection_manager.cpp
tests/: test_address_of_binding.cpp  test_any.cpp  test_any_reference.cpp  test_api.cpp  test_api_types.cpp  test_compile_time.cpp  test_compile_time1.cpp  test_compile_time2.cpp  test_compile_time_c.cpp  test_compile_time_ff.cpp  test_constructor_api.cpp  test_constructor_binding.cpp  test_conversion_binding.cpp  test_free_function_api.cpp  test_free_function_binding.cpp  test_iterators.cpp  test_member_function_api.cpp  test_member_function_binding.cpp  test_member_variable_api.cpp  test_member_variable_binding.cpp  test_reflection_manager.cpp  test_variable_api.cpp
